Fix RLS OOPIF lifecycle DCHECK in ScrollingCoordinator.

ScrollingCoordinator::FrameScrollerIsDirty reads the main frame's
compositing state, so it isn't safe to call it after the compositing
update of a non-main local root.

TESTED=SitePerProcessTextInputManagerTest passes with RLS

Bug: 802274
Change-Id: I04418c26d9ab33c60c99765434db5493138aaa3f
Reviewed-on: https://chromium-review.googlesource.com/881581
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531394}
Former-commit-id: 6fd182f4f24b4d486e4f8ed67337691057c07ec7